--- a/config/i3/config
+++ b/config/i3/config
@@ -47,8 +47,8 @@ exec --no-startup-id picom
 # Start mate-polkit
 exec --no-startup-id /usr/lib/mate-polkit/polkit-mate-authentication-agent-1
 
-# Launch terminal with screenfetch
-exec --no-startup-id alacritty -e bash -c 'screenfetch && bash'
+# Launch terminal with neofetch
+exec --no-startup-id alacritty -e bash -c 'neofetch && bash'
 
 # Disable mouse_warping because it seems to move mouse to other monitor when
 # moving a window to other monitor
