Simplify mouse sens config

--- a/extra/50-mouse-acceleration.conf
+++ b/extra/50-mouse-acceleration.conf
@@ -1,7 +1,7 @@
 Section "InputClass"
 	Identifier "G703"
 	MatchIsPointer "yes"
-	Option "AccelerationNumerator" "1"
-	Option "AccelerationDenominator" "1"
-	Option "AccelerationThreshold" "0"
+	Option "AccelerationProfile" "-1"
+	Option "AccelerationScheme" "none"
+	Option "AccelSpeed" "-0.75"
 EndSection
