Changed picom settings to eliminate artifacting

--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -252,7 +252,7 @@ detect-client-opacity = true;
 # try detecting this with X RandR extension.
 #
 # refresh-rate = 60
-refresh-rate = 0
+refresh-rate = 144
 
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to 
 # boost performance. This should not be used with 
@@ -331,7 +331,7 @@ detect-client-leader = true
 # The opposing option is use-damage
 #
 # no-use-damage = false
-use-damage = true
+use-damage = false
 
 # Use X Sync fence to sync clients' draw calls, to make sure all draw 
 # calls are finished before picom starts drawing. Needed on nvidia-drivers 
