--- a/config/i3/config
+++ b/config/i3/config
@@ -165,16 +165,17 @@ set $ws9 "9"
 set $ws10 "10"
 
 # switch to workspace
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
+set $workspace_notifier ipc -s=/tmp/i3-workspace-in client -q
+bindsym $mod+1 exec --no-startup-id i3-msg workspace number $ws1; exec --no-startup-id echo "update" | $workspace_notifier
+bindsym $mod+2 exec --no-startup-id i3-msg workspace number $ws2; exec --no-startup-id echo "update" | $workspace_notifier
+bindsym $mod+3 exec --no-startup-id i3-msg workspace number $ws3; exec --no-startup-id echo "update" | $workspace_notifier
+bindsym $mod+4 exec --no-startup-id i3-msg workspace number $ws4; exec --no-startup-id echo "update" | $workspace_notifier
+bindsym $mod+5 exec --no-startup-id i3-msg workspace number $ws5; exec --no-startup-id echo "update" | $workspace_notifier
+bindsym $mod+6 exec --no-startup-id i3-msg workspace number $ws6; exec --no-startup-id echo "update" | $workspace_notifier
+bindsym $mod+7 exec --no-startup-id i3-msg workspace number $ws7; exec --no-startup-id echo "update" | $workspace_notifier
+bindsym $mod+8 exec --no-startup-id i3-msg workspace number $ws8; exec --no-startup-id echo "update" | $workspace_notifier
+bindsym $mod+9 exec --no-startup-id i3-msg workspace number $ws9; exec --no-startup-id echo "update" | $workspace_notifier
+bindsym $mod+0 exec --no-startup-id i3-msg workspace number $ws10; exec --no-startup-id echo "update" | $workspace_notifier
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1
