--- a/config/polybar/config
+++ b/config/polybar/config
@@ -23,6 +23,9 @@ font-2 = MaterialDesignIconsDesktop-Regular:size=14;4
 font-3 = MaterialDesignIconsDesktop-Regular:size=14;3
 font-4 = MaterialDesignIconsDesktop-Regular:size=18;5
 font-5 = MaterialDesignIconsDesktop-Regular:size=17;4
+font-6 = FiraCode:style=Regular:size=11;6
+font-7 = FiraCode:style=Regular:size=10;6
+font-8 = FiraCode:weight=bold:size=13;7
 
 #tray-position = center
 
@@ -94,6 +97,12 @@ type = custom/script
 tail = true
 exec = ${root.time-command}
 
+[module/i3-workspace]
+#inherit = module/styling
+type = custom/script
+tail = true
+exec = ${root.i3-workspace-command}
+
 ### LEFT BAR ###
 
 [bar/left]
@@ -101,6 +110,7 @@ inherit = bar/main
 monitor = DP-2
 
 modules-left = power volume media
+modules-center = i3-workspace
 modules-right = updates bandwidth cpu-usage cpu-temp date time
 
 power-command = ipc -s=/tmp/power-in server -d | schedule $HOME/.config/polybar/scripts/power.sh | ipc -p -s=/tmp/power server -d -m=1
@@ -112,6 +122,7 @@ cpu-usage-command = ipc -s=/tmp/cpu-usage-in server -d | schedule -i=2 $HOME/.co
 cpu-temp-command = ipc -s=/tmp/cpu-temp-in server -d | schedule -i=2 $HOME/.config/polybar/scripts/cpu-temp.sh Tdie | ipc -p -s=/tmp/cpu-temp server -d -m=1
 date-command = ipc -s=/tmp/date-in server -d | schedule -i=1 $HOME/.config/polybar/scripts/date.sh | ipc -p -s=/tmp/date server -d -m=1
 time-command = ipc -s=/tmp/time-in server -d | schedule -i=1 $HOME/.config/polybar/scripts/time.sh | ipc -p -s=/tmp/time server -d -m=1
+i3-workspace-command = ipc -s=/tmp/i3-workspace-in server -d | schedule -i=1 $HOME/.config/polybar/scripts/i3-workspace.sh | ipc -p -s=/tmp/i3-workspace server -d -m=1
 
 ### RIGHT BAR ###
 
@@ -141,7 +152,7 @@ monitor = rdp0
 modules-left = power
 modules-right = updates bandwidth cpu-usage cpu-temp date time
 
-power-command = ipc -s=/tmp/power-in server -d | schedule $HOME/.config/polybar/scripts/power.sh
+power-command = ipc -s=/tmp/power-in server -d | schedule $HOME/.config/polybar/scripts/power-only-logout.sh
 updates-command = ipc -s=/tmp/updates-in server -d | schedule -i=60 $HOME/.config/polybar/scripts/updates.sh
 bandwidth-command = ipc -s=/tmp/bandwidth-in server -d | schedule -i=2 $HOME/.config/polybar/scripts/bandwidth.sh bond0
 cpu-usage-command = ipc -s=/tmp/cpu-usage-in server -d | schedule -i=2 $HOME/.config/polybar/scripts/cpu-usage.sh
@@ -158,9 +169,26 @@ monitor = nxoutput0
 modules-left = power volume media
 modules-right = updates bandwidth cpu-usage cpu-temp date time
 
-power-command = ipc -s=/tmp/power-in server -d | schedule $HOME/.config/polybar/scripts/power.sh
+power-command = ipc -s=/tmp/power-in server -d | schedule $HOME/.config/polybar/scripts/power-only-logout.sh
 volume-command = ipc -s=/tmp/volume-in server -d 2>/dev/null | schedule -i=2 $HOME/.config/polybar/scripts/volume.sh
 media-command = $HOME/.config/polybar/scripts/media.sh
+updates-command = ipc -s=/tmp/updates-in server -d | schedule -i=60 $HOME/.config/polybar/scripts/updates.sh
+bandwidth-command = ipc -s=/tmp/bandwidth-in server -d | schedule -i=2 $HOME/.config/polybar/scripts/bandwidth.sh bond0
+cpu-usage-command = ipc -s=/tmp/cpu-usage-in server -d | schedule -i=2 $HOME/.config/polybar/scripts/cpu-usage.sh
+cpu-temp-command = ipc -s=/tmp/cpu-temp-in server -d | schedule -i=2 $HOME/.config/polybar/scripts/cpu-temp.sh Tdie
+date-command = ipc -s=/tmp/date-in server -d | schedule -i=1 $HOME/.config/polybar/scripts/date.sh
+time-command = ipc -s=/tmp/time-in server -d | schedule -i=1 $HOME/.config/polybar/scripts/time.sh
+
+### VNC BAR ###
+
+[bar/vnc]
+inherit = bar/main
+monitor = VNC-0
+
+modules-left = power
+modules-right = updates bandwidth cpu-usage cpu-temp date time
+
+power-command = ipc -s=/tmp/power-in server -d | schedule $HOME/.config/polybar/scripts/power-only-logout.sh
 updates-command = ipc -s=/tmp/updates-in server -d | schedule -i=60 $HOME/.config/polybar/scripts/updates.sh
 bandwidth-command = ipc -s=/tmp/bandwidth-in server -d | schedule -i=2 $HOME/.config/polybar/scripts/bandwidth.sh bond0
 cpu-usage-command = ipc -s=/tmp/cpu-usage-in server -d | schedule -i=2 $HOME/.config/polybar/scripts/cpu-usage.sh
