Simplify new i3-workspace module's update logic

--- a/config/polybar/config
+++ b/config/polybar/config
@@ -122,7 +122,7 @@ cpu-usage-command = ipc -s=/tmp/cpu-usage-in server -d | schedule -i=2 $HOME/.co
 cpu-temp-command = ipc -s=/tmp/cpu-temp-in server -d | schedule -i=2 $HOME/.config/polybar/scripts/cpu-temp.sh Tdie | ipc -p -s=/tmp/cpu-temp server -d -m=1
 date-command = ipc -s=/tmp/date-in server -d | schedule -i=1 $HOME/.config/polybar/scripts/date.sh | ipc -p -s=/tmp/date server -d -m=1
 time-command = ipc -s=/tmp/time-in server -d | schedule -i=1 $HOME/.config/polybar/scripts/time.sh | ipc -p -s=/tmp/time server -d -m=1
-i3-workspace-command = ipc -s=/tmp/i3-workspace-in server -d | schedule -i=1 $HOME/.config/polybar/scripts/i3-workspace.sh | ipc -p -s=/tmp/i3-workspace server -d -m=1
+i3-workspace-command = i3-msg -t subscribe -m '[ "workspace" ]' | schedule -i=1 $HOME/.config/polybar/scripts/i3-workspace.sh
 
 ### RIGHT BAR ###
 
