--- a/rust/schedule/Cargo.toml
+++ b/rust/schedule/Cargo.toml
@@ -7,6 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-std = { version = "1.9.0", features = ["attributes"] }
-futures = "0.3.15"
-structopt = "0.3.21"
+structopt = "0.3.26"
+tokio = { version = "1.49.0", features = ["full"] }
