--- a/rust/ipc/Cargo.toml
+++ b/rust/ipc/Cargo.toml
@@ -7,9 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-std = { version = "1.9.0", features = ["attributes"] }
-async-compat = "0.2.1"
-async-ctrlc = "1.2.0"
-futures = "0.3.15"
-structopt = "0.3.21"
-tokio = { version = "1.6.1", features = ["net"] }
+futures = "0.3.31"
+structopt = "0.3.26"
+tokio = { version = "1.49.0", features = ["io-std", "io-util", "macros", "net", "rt", "sync", "time"] }
+tokio-util = "0.7.18"
