Clean up schedule's dependencies and use only one thread

--- a/rust/schedule/Cargo.toml
+++ b/rust/schedule/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2018"
 
 [dependencies]
 structopt = "0.3.26"
-tokio = { version = "1.49.0", features = ["full"] }
+tokio = { version = "1.49.0", features = ["io-std", "io-util", "macros", "process", "rt", "sync", "time"] }
