--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -66,7 +66,7 @@ shadow-exclude = [
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c"
+  "_GTK_FRAME_EXTENTS"
 ];
 
 # Specify a X geometry that describes the region in which shadow should not
@@ -203,7 +203,7 @@ blur-kern = "3x3box";
 blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c"
+  "_GTK_FRAME_EXTENTS"
 ];
 
 #################################
@@ -247,12 +247,6 @@ detect-rounded-corners = true;
 #
 # detect-client-opacity = false
 detect-client-opacity = true;
-
-# Specify refresh rate of the screen. If not specified or 0, picom will 
-# try detecting this with X RandR extension.
-#
-# refresh-rate = 60
-refresh-rate = 144
 
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to 
 # boost performance. This should not be used with 
@@ -429,4 +423,4 @@ wintypes:
   dropdown_menu = { opacity = 0.8; }
 };
 
-opacity-rule = [ "100:_NET_WM_STATE@:32a = '_NET_WM_STATE_FULLSCREEN'" ];
+opacity-rule = [ "100:_NET_WM_STATE = '_NET_WM_STATE_FULLSCREEN'" ];
